# bp_tracker

./: .gitignore  CLAUDE.md  README.md  config.py  dashboard.py  pyproject.toml  watcher.py
data/: readings.example.csv
deploy/: bp-tracker.service  nginx.conf  setup_vps.sh
