[project]
name = "bp-tracker"
version = "0.1.0"
description = "Local blood pressure tracker — watches a folder for BP monitor photos, extracts readings via Claude vision, logs to CSV, and visualises with Plotly/Dash."
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.84.0",
    "dash>=4.0.0",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "plotly>=6.6.0",
    "python-dotenv>=1.2.2",
    "watchdog>=6.0.0",
]
